File: components/nexus-repository-services/src/main/java/org/sonatype/nexus/repository/security/internal/ContentPermissionCheckerImpl.java